# LibrarySystem-by-C

./: CMakeLists.txt  README.md  book_management.h  libararian.c  libararian.h  librarian.c  librarian.h  library.c  library.h  main.c  makefile  reg_or_login.c  reg_or_login.h  search_for_books.c  search_for_books.h  test.c  user.c  user.h  utility.c  utility.h
